# ag-3d

./: Cargo.toml  DESIGN.md  README.md  memo.md
src/: main.rs
src/game/: mod.rs
src/game/components/: health.rs  mod.rs  physics.rs  size.rs
src/game/entities/: enemy.rs  food.rs  mod.rs  player.rs
src/game/systems/: collision.rs  growth.rs  mod.rs  movement.rs  spawning.rs
src/network/: client.rs  server.rs
src/rendering/: camera.rs  lighting.rs  materials.rs  mod.rs  shapes.rs
src/utils/: config.rs  math.rs  mod.rs
