[package]
name = "agario-3d"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_sprite",
    "bevy_pbr",
    "png",
    "x11"
] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }